src/test/ui/async-await/dont-print-desugared-async.stderr
warning: lifetime parameter `'_` never used
  --> $DIR/dont-print-desugared-async.rs:5:31
   |
LL | async fn async_fn(&ref mut s: &[i32]) {}
   |                               ^
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/dont-print-desugared-async.rs:5:20
   |
LL | async fn async_fn(&ref mut s: &[i32]) {}
   |                   -^^^^^^^^^
   |                   ||
   |                   |cannot borrow as mutable through `&` reference
   |                   help: consider changing this to be a mutable reference: `&mut ref mut s`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
